# safelink

./: .gitignore  readme.md
firmware/safelink_band/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
firmware/safelink_band/main/: CMakeLists.txt  analog.c  analog.h  bluetooth.c  bluetooth.h  i2c.c  i2c.h  safelink_band.c
firmware/safelink_hub/: CMakeLists.txt  README.md  REQUIREMENTS.md  partitions.csv  sdkconfig.defaults
firmware/safelink_hub/main/: CMakeLists.txt  main.c
firmware/safelink_wearable/: CMakeLists.txt  README.md  REQUIREMENTS.md  partitions.csv  sdkconfig.defaults
firmware/safelink_wearable/main/: CMakeLists.txt  main.c
firmware/safelink_wearable_hub/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
firmware/safelink_wearable_hub/main/: CMakeLists.txt  DFPLAYER_README.md  analog.c  analog.h  bluetooth.h  dfplayer_mini.c  dfplayer_mini.h  main.c  safelink_wearable_hub.c
test_bluetooth_sensor/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
test_bluetooth_sensor/main/: CMakeLists.txt  analog.h  bluetooth.c  bluetooth.h  i2c.c  i2c.h  test_bluetooth_sensor.c
test_esp32c3_blink/: CMakeLists.txt  README.md
test_esp32c3_blink/main/: main.c
test_gpio_blink/: CMakeLists.txt  README.md  sdkconfig.defaults  sdkconfig.old
test_gpio_blink/main/: main.c
test_sensor_am2320_heartbeat/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
test_sensor_am2320_heartbeat/main/: CMakeLists.txt  main.c
(+37 files in other folders)
